fix(site): OTOGE DB logo clipping in mobile Safari

--- a/shared/src/less/header.less
+++ b/shared/src/less/header.less
@@ -23,7 +23,7 @@
 		}
 
 		svg {
-			height: 12.5px;
+			height: 13px;
 
 		}
 	}
